overflow fix on preview

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ h1, h2, h3, h4, h5, h6 {
     bottom: 0;
     left: 50%;
     right: 0;
+    overflow: auto;
 }
 
 @media print {
